--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.2",
     "@studio-freight/react-lenis": "^0.0.47",
     "@types/howler": "^2.2.12",
     "autoprefixer": "^10.4.23",
@@ -32,6 +33,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prisma": "^6.19.2",
     "tailwindcss": "^3.4.19",
     "typescript": "^5"
   }
